@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Remember mailbox list position when viewing messages in smartmobile view.
 * [mms] Fix handling unsuccessful mailbox import in dynamic view.
 * [mms] Mailbox imports are now limited to 500 messages by default.
 * [mms] Fix adding addresses from the contacts popup in certain situations (Bug #12312).
@@ -3209,6 +3210,7 @@
    <date>2013-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Remember mailbox list position when viewing messages in smartmobile view.
 * [mms] Fix handling unsuccessful mailbox import in dynamic view.
 * [mms] Mailbox imports are now limited to 500 messages by default.
 * [mms] Fix adding addresses from the contacts popup in certain situations (Bug #12312).
